feat: tests created for activerecord and usability

--- a/app/views/dealerships/show.html.erb
+++ b/app/views/dealerships/show.html.erb
@@ -1,6 +1,6 @@
-<ul>
-  <li><%= @dealership.name %></li>
-  <li><%= @dealership.vehicle_lot_size %></li>
-  <li><%= @dealership.service_center %></li>
-  <li><%= @dealership.car_wash %></li>
-</ul>
+<div>
+  <p>Dealership name: <%= @dealership.name %></p>
+  <p>Dealership lot size: <%= @dealership.vehicle_lot_size %></p>
+  <p>Service center: <%= @dealership.service_center %></p>
+  <p>Car-wash center: <%= @dealership.car_wash %></p>
+</div>
