--- a/app/views/dealerships/index.html.erb
+++ b/app/views/dealerships/index.html.erb
@@ -1,5 +1,5 @@
 <h1>All Dealerships</h1>
 
 <% @dealerships.each do |dealer| %>
-  <%= link_to dealer.name, "/dealerships/#{dealer.id}"%>
+  <p>Dealership name: <%= link_to dealer.name, "/dealerships/#{dealer.id}"%></p>
 <% end %>
