--- a/app/views/vehicles/index.html.erb
+++ b/app/views/vehicles/index.html.erb
@@ -1,11 +1,11 @@
 <h1>All Vehicles</h1>
 
 <% @vehicles.each do |vehicle| %>
-  <ul id="vehicle-<%= vehicle.id %>">
-    <li><%= link_to vehicle.name, "/vehicles/#{vehicle.id}"%></li>
-    <li><%= vehicle.cylinder_count %></li>
-    <li><%= vehicle.luxury_model %></li>
-    <li><%= vehicle.horsepower %></li>
-    <li><%= vehicle.torque %></li>
-  </ul>
+  <div id="vehicle-<%= vehicle.id %>">
+    <p>Vehicle name: <%= vehicle.name %></p>
+    <p>Vehicle cylinder count: <%= vehicle.cylinder_count %></p>
+    <p>This vehicle has the luxury model: <%= vehicle.luxury_model %></p>
+    <p>Vehicle horsepower: <%= vehicle.horsepower %></p>
+    <p>Vehicle torque: <%= vehicle.torque %></p>
+  </div>
 <% end %>
