--- a/app/views/dealerships/show.html.erb
+++ b/app/views/dealerships/show.html.erb
@@ -1,8 +1,8 @@
 <div>
-  <p>Dealership name: <%= @dealership.name %></p>
+  <p id="id_<%= @dealership.id %>">Dealership name: <%= @dealership.name %></p>
   <p>Dealership lot size: <%= @dealership.vehicle_lot_size %></p>
   <p>Service center: <%= @dealership.service_center %></p>
   <p>Car-wash center: <%= @dealership.car_wash %></p>
-  <p>Current vehicle count: <%= @dealership.vehicles.count %></p>
+  <p>Current vehicle count: <%= @dealership.vehicles_count %></p>
   <%= link_to "View dealership vehicles","/dealerships/#{@dealership.id}/vehicles" %>
 </div>
