feat: created functionality for card 11

--- a/app/views/dealerships/index.html.erb
+++ b/app/views/dealerships/index.html.erb
@@ -1,4 +1,5 @@
 <h1>All Dealerships</h1>
+<a href="/dealerships/new">New Dealership</a>
 
 <% @dealerships.each do |dealer| %>
   <p id="id_<%= dealer.id %>">Dealership name: <%= link_to dealer.name, "/dealerships/#{dealer.id}"%></p>
