feat: complete card 14

--- a/app/views/vehicles/show.html.erb
+++ b/app/views/vehicles/show.html.erb
@@ -5,3 +5,4 @@
   <p>Vehicle horsepower: <%= @vehicle.horsepower %></p>
   <p>Vehicle torque: <%= @vehicle.torque %></p>
 </div>
+<%= link_to "Update Vehicle","/vehicles/#{@vehicle.id}/edit" %>
