--- a/app/views/dealerships/show.html.erb
+++ b/app/views/dealerships/show.html.erb
@@ -1,5 +1,5 @@
-<div>
-  <p id="id_<%= @dealership.id %>">Dealership name: <%= @dealership.name %></p>
+<div id="id_<%= @dealership.id %>">
+  <p>Dealership name: <%= @dealership.name %></p>
   <p>Dealership lot size: <%= @dealership.vehicle_lot_size %></p>
   <p>Service center: <%= @dealership.service_center %></p>
   <p>Car-wash center: <%= @dealership.car_wash %></p>
