--- a/app/views/vehicles/show.html.erb
+++ b/app/views/vehicles/show.html.erb
@@ -1,4 +1,4 @@
-<div id="vehicle-<%= @vehicle.id %>">
+<div id="id_<%= @vehicle.id %>">
   <p>Vehicle name: <%= @vehicle.name %></p>
   <p>Vehicle cylinder count: <%= @vehicle.cylinder_count %></p>
   <p>This vehicle has the luxury model: <%= @vehicle.luxury_model %></p>
