--- a/app/views/dealerships/index.html.erb
+++ b/app/views/dealerships/index.html.erb
@@ -2,6 +2,8 @@
 <%= link_to "New Dealership","/dealerships/new" %>
 
 <% @dealerships.each do |dealer| %>
-  <p id="id_<%= dealer.id %>">Dealership name: <%= link_to dealer.name, "/dealerships/#{dealer.id}"%></p>
-  <p>Created: <%= dealer.created_at %></p>
+  <div id="id_<%= dealer.id %>">
+    <p>Dealership name: <%= link_to dealer.name, "/dealerships/#{dealer.id}"%></p>
+    <p>Created: <%= dealer.created_at %></p>
+  </div>
 <% end %>
