--- a/app/views/vehicles/index.html.erb
+++ b/app/views/vehicles/index.html.erb
@@ -1,7 +1,7 @@
 <h1>All Vehicles</h1>
 
 <% @vehicles.each do |vehicle| %>
-  <div id="vehicle-<%= vehicle.id %>">
+  <div id="id_<%= vehicle.id %>">
     <p>Vehicle name: <%= vehicle.name %></p>
     <p>Vehicle cylinder count: <%= vehicle.cylinder_count %></p>
     <p>This vehicle has the luxury model: <%= vehicle.luxury_model %></p>
