--- a/app/views/dealerships/index.html.erb
+++ b/app/views/dealerships/index.html.erb
@@ -5,5 +5,6 @@
   <div id="id_<%= dealer.id %>">
     <p>Dealership name: <%= link_to dealer.name, "/dealerships/#{dealer.id}"%></p>
     <p>Created: <%= dealer.created_at %></p>
+    <%= link_to "Update Dealership", "/dealerships/#{dealer.id}/edit" %>
   </div>
 <% end %>
