--- a/app/views/vehicles/index.html.erb
+++ b/app/views/vehicles/index.html.erb
@@ -7,5 +7,6 @@
     <p>This vehicle has the luxury model: <%= vehicle.luxury_model %></p>
     <p>Vehicle horsepower: <%= vehicle.horsepower %></p>
     <p>Vehicle torque: <%= vehicle.torque %></p>
+    <%= link_to "Update Vehicle", "/vehicles/#{vehicle.id}/edit" %>
   </div>
 <% end %>
