--- a/app/views/dealerships/show.html.erb
+++ b/app/views/dealerships/show.html.erb
@@ -4,6 +4,11 @@
   <p>Service center: <%= @dealership.service_center %></p>
   <p>Car-wash center: <%= @dealership.car_wash %></p>
   <p>Current vehicle count: <%= @dealership.vehicles_count %></p>
+  <form action="/dealerships/<%= @dealership.id %>" method="POST">
+    <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
+    <input type="hidden" name="_method" value="DELETE">
+    <input type="submit" value="Delete Dealership"/>
+  </form>
   <%= link_to "Update Dealership","/dealerships/#{@dealership.id}/edit" %>
   <%= link_to "View dealership vehicles","/dealerships/#{@dealership.id}/vehicles" %>
 </div>
