feat: create card 20 functionality

--- a/app/views/vehicles/show.html.erb
+++ b/app/views/vehicles/show.html.erb
@@ -5,4 +5,9 @@
   <p>Vehicle horsepower: <%= @vehicle.horsepower %></p>
   <p>Vehicle torque: <%= @vehicle.torque %></p>
 </div>
+<form action="/vehicles/<%= @vehicle.id %>" method="POST">
+  <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
+  <input type="hidden" name="_method" value="DELETE">
+  <input type="submit" value="Delete vehicle"/>
+</form>
 <%= link_to "Update Vehicle","/vehicles/#{@vehicle.id}/edit" %>
