--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="background-color: #272838">
   <head>
     <title>RelationalRails</title>
     <%= csrf_meta_tags %>
@@ -7,11 +7,15 @@
 
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
   </head>
 
-  <body>
-    <%= link_to "Vehicles", '/vehicles' %>
-    <%= link_to "Dealerships", '/dealerships' %>
+  <body class="d-flex align-items-center justify-content-center flex-column text-light m-3" style="background-color: #272838">
+  <div class="btn-group" role="group">
+    <%= link_to "Vehicles", '/vehicles', class: "btn btn-primary mb-3" %>
+    <%= link_to "Dealerships", '/dealerships', class: "btn btn-primary mb-3" %>
+  </div>
     <%= yield %>
   </body>
 </html>
