--- a/app/views/vehicles/edit.html.erb
+++ b/app/views/vehicles/edit.html.erb
@@ -1,25 +1,27 @@
 <h1>Update Vehicle</h1>
 
-<p>Update Vehicle</p>
 <form action="/vehicles/<%= @vehicle.id %>" method="post">
   <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
   <input type="hidden" name="_method" value="PATCH" />
-  <p>Enter a update for the vehicle:</p>
-
-  <label for="name">Vehicle name:</label>
-  <input id="name" type='text' name='vehicle[name]' required/><br/>
-
-  <label for="cylinder_count">Vehicle cylinder count:</label>
-  <input id="cylinder_count" type='text' name='vehicle[cylinder_count]' required/><br/>
-
-  <label for="horsepower">Vehicle horsepower:</label>
-  <input id="horsepower" type='text' name='vehicle[horsepower]' required/><br/>
-
-  <label for="torque">Vehicle torque:</label>
-  <input id="torque" type='text' name='vehicle[torque]' required/><br/>
-
-  <label for="luxury_model">Luxury model:</label>
-  <input id="luxury_model" type='checkbox' name='vehicle[luxury_model]'/><br/>
-
-  <input type='submit' value="Update Vehicle"/>
+  <div class="mb-3">
+    <label for="name" class="form-label">Vehicle name:</label>
+    <input id="name" class="form-control" type='text' name='vehicle[name]' required/>
+  </div>
+  <div class="mb-3">
+    <label for="cylinder_count" class="form-label">Vehicle cylinder count:</label>
+    <input id="cylinder_count" type='text' name='vehicle[cylinder_count]' class="form-control" required/>
+  </div>
+  <div class="mb-3">
+    <label for="horsepower" class="form-label">Vehicle horsepower:</label>
+    <input id="horsepower" class="form-control" type='text' name='vehicle[horsepower]' required/>
+  </div>
+  <div class="mb-3">
+    <label for="torque" class="form-label">Vehicle torque:</label>
+    <input id="torque" class="form-control" type='text' name='vehicle[torque]' required/>
+  </div>
+  <div class="mb-3 form-check">
+    <input type="checkbox" class="form-check-input" id="luxury_model" name='vehicle[luxury_model]'>
+    <label class="form-check-label" for="luxury_model">Luxury model</label>
+  </div>
+  <input type='submit' value="Update Vehicle" class="btn btn-success"/>
 </form>
