feat: update some forms to use erb

--- a/app/views/dealership_vehicles/new.html.erb
+++ b/app/views/dealership_vehicles/new.html.erb
@@ -1,26 +1,29 @@
 <h1>New Vehicle</h1>
 
-<form action="/dealerships/<%= @dealer.id %>/vehicles" method="post">
-  <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
+<%= form_with url: "/dealerships/#{@dealer.id}/vehicles", method: :post, local: true do |form| %>
   <div class="mb-3">
-    <label for="name" class="form-label">Vehicle name:</label>
-    <input id="name" class="form-control" type='text' name='vehicle[name]' required/>
+    <%= form.label :name, class: "form-label" %>
+    <%= form.text_field :name, class: "form-control" %>
   </div>
   <div class="mb-3">
-    <label for="cylinder_count" class="form-label">Vehicle cylinder count:</label>
-    <input id="cylinder_count" type='text' name='vehicle[cylinder_count]' class="form-control" required/>
+    <%= form.label :cylinder_count, class: "form-label" %>
+    <%= form.text_field :cylinder_count, class: "form-control" %>
   </div>
   <div class="mb-3">
-    <label for="horsepower" class="form-label">Vehicle horsepower:</label>
-    <input id="horsepower" class="form-control" type='text' name='vehicle[horsepower]' required/>
+    <%= form.label :horsepower, class: "form-label" %>
+    <%= form.text_field :horsepower, class: "form-control" %>
   </div>
   <div class="mb-3">
-    <label for="torque" class="form-label">Vehicle torque:</label>
-    <input id="torque" class="form-control" type='text' name='vehicle[torque]' required/>
+    <%= form.label :torque, class: "form-label" %>
+    <%= form.text_field :torque, class: "form-control" %>
   </div>
   <div class="mb-3 form-check">
-    <input type="checkbox" class="form-check-input" id="luxury_model" name='vehicle[luxury_model]'>
-    <label class="form-check-label" for="luxury_model">Luxury model</label>
+    <%= form.radio_button :luxury_model, "true", class: "form-check-input" %>
+    <%= form.label :luxury_model_true, "Is a luxury model", class: "form-check-label" %>
   </div>
-  <input type='submit' value="Create Vehicle" class="btn btn-success"/>
-</form>
+  <div class="mb-3 form-check">
+    <%= form.radio_button :luxury_model, "false", class: "form-check-input" %>
+    <%= form.label :luxury_model_false, "Isn't a luxury model", class: "form-check-label" %>
+  </div>
+  <%= form.submit "Create Vehicle", class: "btn btn-success" %>
+<% end %>
