--- a/app/views/vehicles/index.html.erb
+++ b/app/views/vehicles/index.html.erb
@@ -8,12 +8,10 @@
     <p>Vehicle horsepower: <%= vehicle.horsepower %></p>
     <p>Vehicle torque: <%= vehicle.torque %></p>
     <div class="btn-group" role="group">
-      <form action="/vehicles/<%= vehicle.id %>" method="POST">
-        <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
-        <input type="hidden" name="_method" value="DELETE">
-        <input type="submit" value="Delete vehicle" class="mx-1 btn btn-danger">
-      </form>
-      <%= link_to "Update Vehicle", "/vehicles/#{vehicle.id}/edit", class: "mx-1 btn btn-warning" %>
+      <%= form_with url: "/vehicles/#{vehicle.id}", method: :delete, local: true, authenticity_token: form_authenticity_token do |form| %>
+        <%= form.submit "Delete Vehicle", class: "mx-1 btn btn-danger" %>
+      <% end %>
+      <%= link_to "Update Vehicle", "/vehicles/#{vehicle.id}/edit", class: "mx-1 btn btn-warning rounded" %>
     </div>
   </div>
 <% end %>
