--- a/app/views/dealership_vehicles/index.html.erb
+++ b/app/views/dealership_vehicles/index.html.erb
@@ -10,7 +10,7 @@
     <p>Vehicle torque: <%= vehicle.torque %></p>
   </div>
 <% end %>
-<!-- Change this to use ?sort=alphabetical -->
+
 <%= link_to "Sort alphabetically by Name", "/dealerships/#{@dealer.id}/alphabetical/vehicles/", class: "btn btn-success m-2" %>
 
 <%= form_with url: "/dealerships/#{@dealer.id}/vehicles", method: :patch, local: true, authenticity_token: form_authenticity_token do |form| %>
@@ -18,5 +18,5 @@
     <%= form.label :threshold, "Threshold number:", class: "form-label" %>
     <%= form.number_field :threshold, class: "form-control", placeholder: "Threshold number.." %>
   </div>
-  <%= form.submit "Only return records with more than `number` of cylinders.", class: "btn btn-primary" %>
+  <%= form.submit "Only return records with more than `number` of cylinders.", class: "btn btn-primary", required: true %>
 <% end %>
