--- a/app/views/dealership_vehicles/new.html.erb
+++ b/app/views/dealership_vehicles/new.html.erb
@@ -1,6 +1,6 @@
 <h1>New Vehicle</h1>
 
-<%= form_with url: "/dealerships/#{@dealer.id}/vehicles", method: :patch, local: true, authenticity_token: form_authenticity_token do |form| %>
+<%= form_with url: "/dealerships/#{@dealer.id}/vehicles", method: :post, local: true, authenticity_token: form_authenticity_token do |form| %>
   <div class="mb-3">
     <%= form.label :name, class: "form-label" %>
     <%= form.text_field :name, class: "form-control", placeholder: "Vehicle name...", required: true %>
