--- a/app/views/dealerships/new.html.erb
+++ b/app/views/dealerships/new.html.erb
@@ -6,8 +6,8 @@
     <%= form.text_field :name, class: "form-control", required: true, placeholder: "Dealer name.." %>
   </div>
   <div class="mb-3">
-    <%= form.label :lot_size, "Dealer lot size:", class: "form-label" %>
-    <%= form.number_field :lot_size, class: "form-control", required: true, placeholder: "Dealer lot size.." %>
+    <%= form.label :vehicle_lot_size, "Dealer lot size:", class: "form-label" %>
+    <%= form.number_field :vehicle_lot_size, class: "form-control", required: true, placeholder: "Dealer lot size.." %>
   </div>
   <div class="mb-3 p-3 rounded" style="background-color: #37393a">
     <div class="form-check">
