--- a/app/views/vehicles/index.html.erb
+++ b/app/views/vehicles/index.html.erb
@@ -1,5 +1,5 @@
 <h1>All Vehicles</h1>
-
+<p class="text-muted">Showing only luxury model vehicles</p>
 <% @vehicles.each do |vehicle| %>
   <div id="id_<%= vehicle.id %>" class="d-flex align-items-center justify-content-center flex-column mt-5">
     <h5>Vehicle name: <%= link_to vehicle.name, "/vehicles/#{vehicle.id}", class: "link-success"%></h5>
