--- a/app/views/dealership_vehicles/index.html.erb
+++ b/app/views/dealership_vehicles/index.html.erb
@@ -11,9 +11,9 @@
   </div>
 <% end %>
 
-<%= link_to "Sort alphabetically by Name", "/dealerships/#{@dealer.id}/alphabetical/vehicles/", class: "btn btn-success m-2" %>
+<%= link_to "Sort alphabetically by Name", "/dealerships/#{@dealer.id}/vehicles/?sort=alphabetical", class: "btn btn-success m-2" %>
 
-<%= form_with url: "/dealerships/#{@dealer.id}/vehicles", method: :patch, local: true, authenticity_token: form_authenticity_token do |form| %>
+<%= form_with url: "/dealerships/#{@dealer.id}/vehicles/?sort=cylinder_threshold", method: :patch, local: true, authenticity_token: form_authenticity_token do |form| %>
   <div class="mb-3 mt-3">
     <%= form.label :threshold, "Threshold number:", class: "form-label" %>
     <%= form.number_field :threshold, class: "form-control", placeholder: "Threshold number.." %>
